# MyStreamer

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  main.cpp
base/: CMakeLists.txt  README.md  base_define.h  base_error.cpp  base_error.h  base_json_parser.cpp  base_json_parser.h  base_manual_reset_event.cpp  base_manual_reset_event.h  base_obj_configuration_serializer.cpp  base_obj_configuration_serializer.h  base_obj_configurator.h  base_obj_information.h  base_ring_buffer.cpp  base_ring_buffer.h  base_str_tools.cpp  base_str_tools.h  base_tool.cpp  base_tool.h  uncopyable.h
base/test/: CMakeLists.txt  ring_test.cpp
camera/: CMakeLists.txt  video_frame_decorator.cpp  video_frame_decorator.h  video_source_interface.h  video_source_listener_interface.h
camera/V4L2/: READ.md  v4l2_camera.cpp  v4l2_camera.h  v4l2_camera_config.cpp  v4l2_camera_config.h  v4l2_camera_data.cpp  v4l2_camera_data.h  v4l2_tools.h
camera/test/: CMakeLists.txt  v4l2_camrea_test.cpp  v4l2_camrea_test.h
config/: install_git.sh
docs/: API.md
imgproc/: CMakeLists.txt  image.cpp  image.h  image_drawer.cpp  image_drawer.h  img_tools.cpp  img_tools.h  jpeg_encoder.cpp  jpeg_encoder.h
network/: CMakeLists.txt  READ.md  READMD.md
network/http/: net_http_context.cpp  net_http_context.h  net_http_request.h  net_http_response.cpp  net_http_response.h  net_http_server.cpp  net_http_server.h
network/net/: net_acceptor.cpp  net_acceptor.h  net_buffer.cpp  net_buffer.h  net_callbacks.h  net_channel.cpp  net_channel.h  net_connector.cpp  net_connector.h  net_endian.h  net_event_loop.cpp  net_event_loop.h  net_event_loop_thread.cpp  net_event_loop_thread.h  net_event_loop_threadpool.cpp  net_event_loop_threadpool.h  net_inet_address.cpp  net_inet_address.h  net_poller.cpp  net_poller.h  net_socket.cpp  net_socket.h  net_sockets_ops.cpp  net_sockets_ops.h  net_tcp_client.cpp  net_tcp_client.h  net_tcp_connection.cpp  net_tcp_connection.h  net_tcp_server.cpp  net_tcp_server.h  net_timer.cpp  net_timer.h  net_timer_id.h  net_timer_queue.cpp  net_timer_queue.h
network/net_base/: async_logging.cpp  async_logging.h  base_atomic.h  base_condition.cpp  base_condition.h  base_date.cpp  base_date.h  base_exception.cpp  base_exception.h  base_mutex.h  base_thread.cpp  base_thread.h  base_types.h  blocking_queue.h  bounded_blocking_queue.h  count_downlatch.cpp  count_downlatch.h  current_thread.cpp  current_thread.h  file_util.cpp  file_util.h  gzip_file.h  log_file.cpp  log_file.h  log_stream.cpp  log_stream.h  logging.cpp  logging.h  process_info.cpp  process_info.h  singleton.h  string_piece.h  thread_local.h  thread_local_singleton.h  thread_pool.cpp  thread_pool.h  time_stamp.cpp  time_stamp.h  time_zone.cpp  time_zone.h  (+1 more)
network/poller/: net_default_poller.cpp  net_epoll_poller.cpp  net_epoll_poller.h  net_poll_poller.cpp  net_poll_poller.h
network/test/: CMakeLists.txt  http_server_test.cpp
web/: camera.js  index.html  styles.css
webcamera/: CMakeLists.txt  file_request_handler.cpp  file_request_handler.h  video_listener.cpp  video_listener.h  video_source_to_web.cpp  video_source_to_web.h  video_source_to_webdata.cpp  video_source_to_webdata.h  video_to_web.cpp  video_to_web.h  web_camera_control_handler.cpp  web_camera_control_handler.h  web_camera_server.cpp  web_camera_server.h  web_request_handler.cpp  web_request_handler.h
